# ondris

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
config/: testnet-genesis.json
crates/ondris-core/: Cargo.toml
crates/ondris-core/src/: block.rs  chain.rs  difficulty.rs  genesis.rs  header.rs  lib.rs  rpc_types.rs  state.rs  transaction.rs
crates/ondris-miner/: Cargo.toml
crates/ondris-miner-gpu/: Cargo.toml
crates/ondris-miner-gpu/src/: blake3_ref.rs  gpu.rs  kernel.cl  lib.rs  main.rs  ondris_hash_ref.rs  xoshiro_ref.rs
crates/ondris-miner/src/: main.rs
crates/ondris-network/: Cargo.toml
crates/ondris-network/src/: lib.rs
crates/ondris-node/: Cargo.toml
crates/ondris-node/src/: main.rs
crates/ondris-pow/: Cargo.toml
crates/ondris-pow/src/: lib.rs
crates/ondris-primitives/: Cargo.toml
crates/ondris-primitives/src/: lib.rs
crates/ondris-wallet/: Cargo.toml
crates/ondris-wallet/src/: keystore.rs  main.rs
docs/: ALGORITHM.md  ARCHITECTURE.md  WHITEPAPER.md
website/: index.html  stats-template.html  stats.html  template.html
