[package]
name = "ondris-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ondris-primitives = { path = "../ondris-primitives" }
ondris-pow = { path = "../ondris-pow" }
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
anyhow.workspace = true
thiserror.workspace = true
