[package]
name = "ondris-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true
anyhow.workspace = true
