[package]
name = "ondris-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ondris-wallet"
path = "src/main.rs"

[dependencies]
ondris-core = { path = "../ondris-core" }
ondris-primitives = { path = "../ondris-primitives" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
hex.workspace = true
rand.workspace = true
rpassword.workspace = true
